# babocar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  checkout.sh  feladatok.md  format.sh  run_tests.sh
docs/: firmware_model.drawio  system_model.xml  youtube_preview.xcf
docs/thesis/: thesis.tex
docs/thesis/bib/: mybib.bib
docs/thesis/content/: abstract.tex  acknowledgement.tex  appendix.tex  conclusion.tex  introduction.tex  latex-tools.tex  mapping.tex  motion_planning.tex  test_results.tex
docs/thesis/figures/raw/: 3D_lidar.xcf  calc_steering_angle.xcf  car.xcf  car_contour.xcf  car_setup_front.xcf  car_setup_rear.xcf  closing_ball.xcf  compliance_radiuses.xcf  dest_point_update.xcf  dynamic_information.xcf  dynamic_points.xcf  dynamic_window.xcf  group_cutting.xcf  groups.xcf  local_planner_real_test_joined_straight_traj_1_dynamic_obj_1.xcf  local_planner_real_test_joined_straight_traj_1_dynamic_obj_2.xcf  local_planner_real_test_joined_straight_traj_1_dynamic_obj_3.xcf  local_planner_real_test_joined_straight_traj_1_dynamic_obj_4.xcf  local_planner_real_test_joined_straight_traj_1_dynamic_obj_5.xcf  local_planner_real_test_joined_straight_traj_1_dynamic_obj_6.xcf  local_planner_real_test_joined_straight_traj_1_static_obj_1.xcf  local_planner_real_test_joined_straight_traj_1_static_obj_2.xcf  local_planner_real_test_joined_straight_traj_1_static_obj_3.xcf  local_planner_real_test_joined_straight_traj_1_static_obj_4.xcf  map_free.xcf  map_legend.xcf  (+14 more)
docs/thesis/include/: packages.tex  preamble.tex  thesis-en.tex  thesis-hu.tex
